# lakeflow-community-connectors

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  REPO-OVERVIEW.md  pyproject.toml  wiz_config.yaml
.claude/: settings.json
.claude/agents/: connector-dev.md  connector-tester.md
.claude/commands/: batch-develop-connectors.md  create-connector.md  develop-connector.md  validate-connector.md
.claude/skills/authenticate-source/: SKILL.md
.claude/skills/collect-credentials/: SKILL.md
.claude/skills/implement-connector/: SKILL.md
.claude/skills/implement-partitioned-connector/: SKILL.md
.claude/skills/self-review-connector/: SKILL.md
.claude/skills/test-and-fix-connector/: SKILL.md
.claude/skills/validate-connector-auth/: SKILL.md
.claude/skills/validate-incremental-sync/: SKILL.md
.claude/skills/write-back-testing/: SKILL.md
.github/: dependabot.yml
.github/actions/configure-jfrog-pypi/: action.yml
.github/workflows/: connector-self-review.yml  generate-merged-source-file.yml  pylint.yml  test_exclude.txt  tests.yml  verify-locks.yml
demo/: snyk_bronze_landing_demo.py  snyk_demo_pipeline_spec.json  snyk_events_preset.yaml  snyk_medallion_pipeline.py
requirements/: pylint.txt  root.txt  sources.txt  tools.txt
src/databricks/labs/community_connector/interface/: supports_partition.py
src/databricks/labs/community_connector/source_simulator/: DESIGN.md  README.md  __init__.py  cassette.py  corpus.py  coverage.py  endpoint_spec.py  handler.py  interceptor.py  modes.py  pagination.py  recorder.py  replayer.py  sampler.py  simulator.py  synthesizer.py  validator.py
src/databricks/labs/community_connector/source_simulator/tools/: cassette_to_corpus.py  corpus_from_schema.py
src/databricks/labs/community_connector/sources/appsflyer/: _generated_appsflyer_python_source.py  appsflyer.py  pyproject.toml
src/databricks/labs/community_connector/sources/azure_devops/: _generated_azure_devops_python_source.py  pyproject.toml
src/databricks/labs/community_connector/sources/dicomweb/: README.md  _generated_dicomweb_python_source.py  connector_spec.yaml  dicomweb.py
src/databricks/labs/community_connector/sources/example/: _generated_example_python_source.py  example.py  pyproject.toml
src/databricks/labs/community_connector/sources/fhir/: _generated_fhir_python_source.py  pyproject.toml
src/databricks/labs/community_connector/sources/github/: README.md  _generated_github_python_source.py  github.py  pyproject.toml
src/databricks/labs/community_connector/sources/gmail/: _generated_gmail_python_source.py  gmail.py  pyproject.toml
src/databricks/labs/community_connector/sources/google_analytics_aggregated/: _generated_google_analytics_aggregated_python_source.py  google_analytics_aggregated.py  pyproject.toml
src/databricks/labs/community_connector/sources/google_sheets_docs/: _generated_google_sheets_docs_python_source.py  google_sheets_docs.py  pyproject.toml
src/databricks/labs/community_connector/sources/google_workspace/: _generated_google_workspace_python_source.py  connector_spec.yaml  google_workspace.py  google_workspace_mock_api.py  google_workspace_schemas.py
src/databricks/labs/community_connector/sources/hubspot/: _generated_hubspot_python_source.py  hubspot.py  pyproject.toml
src/databricks/labs/community_connector/sources/microsoft_teams/: _generated_microsoft_teams_python_source.py  microsoft_teams.py  microsoft_teams_utils.py  pyproject.toml
src/databricks/labs/community_connector/sources/mixpanel/: _generated_mixpanel_python_source.py  mixpanel.py  pyproject.toml
src/databricks/labs/community_connector/sources/osipi/: _generated_osipi_python_source.py  (+1 more)
src/databricks/labs/community_connector/sources/wiz/: README.md  __init__.py  _generated_wiz_python_source.py  connector_spec.yaml  pyproject.toml  test_wiz.py  wiz.py  wiz_client.py  wiz_client_mock.py  wiz_mock_api.py  wiz_schemas.py
src/databricks/labs/community_connector/sparkpds/: lakeflow_datasource.py
tests/unit/source_simulator/: test_cassette_to_corpus.py  test_harness_integration.py  test_simulate_mode.py  test_simulator.py
tests/unit/sources/: test_partition_suite.py  test_suite.py  test_utils.py  test_write_back_suite.py
tests/unit/sources/appsflyer/: test_appsflyer_lakeflow_connect.py
tests/unit/sources/azure_devops/: test_azure_devops_lakeflow_connect.py
tests/unit/sources/dicomweb/: test_dicomweb_lakeflow_connect.py
tests/unit/sources/example/: test_example_lakeflow_connect.py
tests/unit/sources/fhir/: test_fhir_lakeflow_connect.py  test_fhir_utils.py
tests/unit/sources/github/: test_github_lakeflow_connect.py  test_github_simulator_scenarios.py
tests/unit/sources/github/configs/: dev_table_config.json
tests/unit/sources/gmail/: test_gmail_lakeflow_connect.py  test_gmail_unit.py
tests/unit/sources/google_analytics_aggregated/: test_google_analytics_aggregated_lakeflow_connect.py
tests/unit/sources/google_sheets_docs/: test_google_sheets_docs_lakeflow_connect.py
tests/unit/sources/google_workspace/: test_google_workspace_connector.py
tests/unit/sources/hubspot/: test_hubspot_lakeflow_connect.py
tests/unit/sources/microsoft_teams/: test_microsoft_teams_lakeflow_connect.py
tests/unit/sources/mixpanel/: test_mixpanel_lakeflow_connect.py
tests/unit/sources/osipi/: test_osipi_lakeflow_connect.py
tests/unit/sources/qualtrics/: test_qualtrics_lakeflow_connect.py
tests/unit/sources/sap_successfactors/: test_sap_successfactors_lakeflow_connect.py
tests/unit/sources/snyk/: test_snyk_connector.py
tests/unit/sources/snyk/configs/: dev_table_config.json
tests/unit/sources/surveymonkey/: test_surveymonkey_lakeflow_connect.py
tests/unit/sources/wiz/: test_wiz_connector.py
tests/unit/sources/zendesk/: test_zendesk_lakeflow_connect.py
tests/unit/sources/zoho_crm/: test_zoho_crm_lakeflow_connect.py
tools/scripts/: merge_python_source.py  regenerate-locks.sh
(+470 files in other folders)
