[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lakeflow-community-connectors"
version = "0.1.0"
description = "Lakeflow community connectors built on Spark Python Data Source API"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # PySpark is intentionally unpinned (only a prerelease-permitting floor).
    # Rationale:
    #   1. This library targets the Databricks runtime where PySpark is
    #      always provided; production never installs from this lock.
    #   2. We adopt new PySpark APIs eagerly (VariantType, datasource,
    #      streaming.datasource, pipelines) and want the lock to track
    #      upstream as it ships, including dev/RC releases when GA isn't out.
    #   3. Hash pinning in the lock still guarantees a specific wheel.
    #   4. verify-locks is intentionally non-blocking, so a fresh PySpark
    #      release that triggers drift doesn't fail PRs — just regenerate.
    # The `>=4.2.0.dev0` floor signals to uv that prereleases of 4.2 are
    # eligible (PEP 440 ordering), without committing to a specific version.
    "pyspark>=4.2.0.dev0",
    "pydantic>=2.0.0,<3.0",
    "pyyaml>=6.0,<7.0",
    "pyjwt[crypto]>=2.4.0,<3.0",
    # source_simulator intercepts ``requests.Session.send`` to stand in for
    # live source APIs in tests. Matches the floor used by every per-source
    # pyproject.toml that depends on ``requests``.
    "requests>=2.28.0,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0,<9.0",
    "pytest-cov>=4.0.0,<7.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["databricks*"]
exclude = ["databricks.labs.community_connector.sources*"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.md", "*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v"

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100

[tool.ruff.lint]
# Default ruff rules (E, F) plus:
#   I       — isort: import order / grouping (pylint C0411/C0412)
#   PLR1730 — consider-using-min-builtin (pylint R1730)
select = ["E", "F", "I", "PLR1730"]

[tool.pyrefly]
project-includes = ["**/*.py"]
project-excludes = []
search-path = []
disable-search-path-heuristics = true
ignore-missing-imports = ["*"]
ignore-errors-in-generated-code = true
