[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lakeflow-community-connectors-fhir"
version = "0.1.0"
description = "FHIR R4 connector for Lakeflow Community Connectors"
requires-python = ">=3.10"
dependencies = [
    "pyspark>=4.2.0.dev0",
    "requests>=2.28.0,<3.0",
    "PyJWT[cryptography]>=2.8.0,<3.0",
    "lakeflow-community-connectors>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0,<9.0",
    "pytest-cov>=4.0.0,<7.0",
]

[tool.setuptools]
packages = ["databricks.labs.community_connector.sources.fhir"]

[tool.setuptools.package-dir]
"databricks.labs.community_connector.sources.fhir" = "."

[tool.setuptools.package-data]
"*" = ["*.json", "*.md", "*.yaml"]
